[Payments] Show spinner when invoking payment handler.

Bug: 781287
Change-Id: I81317d3b6299b5617c1886e37596dcbb7f4435de