chrome/browser/ui/views/payments/payment_request_browsertest_base.cc
@@ -230,6 +230,16 @@ void PaymentRequestBrowserTestBase::OnCvcPromptShown() {
     event_waiter_->OnEvent(DialogEvent::CVC_PROMPT_SHOWN);
 }
 
+void PaymentRequestBrowserTestBase::OnProcessingSpinnerShown() {
+  if (event_waiter_)
+    event_waiter_->OnEvent(DialogEvent::PROCESSING_SPINNER_SHOWN);
+}
+
+void PaymentRequestBrowserTestBase::OnProcessingSpinnerHidden() {
+  if (event_waiter_)
+    event_waiter_->OnEvent(DialogEvent::PROCESSING_SPINNER_HIDDEN);
+}
+
 void PaymentRequestBrowserTestBase::OnInterfaceRequestFromFrame(
     content::RenderFrameHost* render_frame_host,
     const std::string& interface_name,
@@ -815,6 +825,12 @@ std::ostream& operator<<(
       break;
     case DialogEvent::ABORT_CALLED:
       out << "ABORT_CALLED";
+      break;
+    case DialogEvent::PROCESSING_SPINNER_SHOWN:
+      out << "PROCESSING_SPINNER_SHOWN";
+      break;
+    case DialogEvent::PROCESSING_SPINNER_HIDDEN:
+      out << "PROCESSING_SPINNER_HIDDEN";
       break;
   }
   return out;
