chrome/browser/ui/views/payments/payment_request_dialog_view.h
@@ -104,6 +104,7 @@ class PaymentRequestDialogView : public views::DialogDelegateView,
   void ShowDialog() override;
   void CloseDialog() override;
   void ShowErrorMessage() override;
+  void ShowProcessingSpinner() override;
 
   // PaymentRequestSpec::Observer:
   void OnStartUpdating(PaymentRequestSpec::UpdateReason reason) override;
@@ -164,9 +165,7 @@ class PaymentRequestDialogView : public views::DialogDelegateView,
           result_delegate,
       content::WebContents* web_contents) override;
 
-  // Shows/Hides a full dialog spinner with the "processing" label that doesn't
-  // offer a way of closing the dialog.
-  void ShowProcessingSpinner();
+  // Hides the full dialog spinner with the "processing" label.
   void HideProcessingSpinner();
 
   Profile* GetProfile();
